--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Palette+Mosaic&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300&display=swap" rel="stylesheet">
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -28,7 +29,7 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #00ff15;
+  background-color: #f5fff5;
   overflow-x: show;
 }
 
@@ -43,7 +44,7 @@ body {
 
 /* Change color on hover */
 .sidenav a:hover {
-  background-color: hsla(179, 100%, 85%, 0.4);
+  background-color: #f5fff5;
   color: black;
 }
 
@@ -59,6 +60,29 @@ body {
   width: 70px;
   height: 70px;
   border-radius: 50%;
+  border: solid 3px #00ff15;
+  border-width: 4px;
+}
+
+/* Style the profile picture */ 
+.avatar-small {
+  vertical-align: middle;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+}
+
+  .circle {
+  width: 500px;
+  height: 500px;
+  line-height: 500px;
+  border:1px solid red;
+  -moz-border-radius:50%;
+  -webkit-border-radius:50%;
+  font-size: 50px;
+  color: #;
+  text-align: center;
+  background: #
 }
   
   <style>
