--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ p3 {
 <body>
 
 <div class="sidenav">
-  <a href="https://www.zro.ec/">•</a>
+  <a href="https://zro.ec"><img src="0.png" alt="Avatar" class="avatar-small"></a>
   <img src="uy.png" alt="Avatar" class="avatar">
   <a><b> Ndc's </b></a>
   <a href="https://www4.unfccc.int/sites/ndcstaging/PublishedDocuments/Uruguay%20First/Uruguay_Primera%20Contribuci%C3%B3n%20Determinada%20a%20nivel%20Nacional.pdf">(es) 2017</a>
@@ -128,9 +128,9 @@ p3 {
   </div>
 
 <div class="content">
-  <h2>▼</h2>
+  <h2></h2>
   <p3 id="demo"></p3>
-  <h3>▲</h3>
+  <h3></h3>
   <br>
   <br>
   <br>
