--- a/index.html
+++ b/index.html
@@ -70,10 +70,20 @@ p4 {
   <br>
   <p3 id="demo"></p3>
   <br>
+  <p>Warming @ rate of</p>
+  <p4>1.56°C ± 0.45°C</p4>
+  <p2>per century since 1960</p2>
   <br>
-  <p4> Warming since 1960 (°C / century) </p4>
-  <p3> 1.56 ± 0.45 </p3>
-  <p2><a href="http://berkeleyearth.org/" target="_blank">Source: Berkeley Earth</a></p2>
+  <p>2020</p>
+  <p4>+1.4°C</p4>
+  <p2>Relative to a late 19th century baseline</p2>
+  <br>
+  <p>2100</p>
+  <p4>+3.7°C</p4>
+  <p2>Relative to a late 19th century baseline</p2>
+  <br>
+  <p>Source: <a href="http://berkeleyearth.org/" target="_blank">Berkeley Earth</a></p>
+  <br>
   <br>
   <br>
   <br>
