--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@ var x = setInterval(function() {
   <br>
 
  <div class="footer">
+ <br>
+ <p1>⦿ Sustainability</p1>
+ <p><a href="https://github.blog/2021-04-22-environmental-sustainability-github/" target="_blank">Hosting Carbon Neutral • zero2050.net ○ GitHub</a></p>
  <p2> Zero Ecosystem is a not for profit company limited by guarantee (Company No. 13349586) registered in England, United Kingdom </p2>
  <br>
   <img src="favicon.png"
