--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ p4 {
 <div class="sidenav">
   <a href=""><img src="uy.png" alt="Avatar" class="avatar"></a>
   <p>Uruguay</p>
+  <p2><a href="https://parisagreement.zero2050.net" target="_blank">1.5°C Paris Agreement goal</a></p2>
 </div>
 
 <div class="content">
