--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Net Zero 2050 Uruguay</title>
+  <title>Net Zero 2030 Uruguay</title>
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -73,7 +73,7 @@ tr:nth-child(even) {
 
 			<div class="profile-image">
 
-				<img src="uk.png" alt="Zero Ecosystems Lab">
+				<img src="uy.png" alt="Zero Ecosystems Lab">
 
 			</div>
 
