--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Open Net Zero Uruguay by 2030</title>
-<meta name="description" content="Open Net Zero Uruguay by 2030. We're here to make Net Zero Open. Search zero2030.net to find out more. #NetZeroOpen">
+  <title>Net Zero Uruguay by 2030</title>
+<meta name="description" content="Net Zero Uruguay by 2030. We're here to make Net Zero Open. Search zero2030.net to find out more. #NetZeroOpen">
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
