--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ tr:nth-child(even) {
 
 			<div class="profile-image">
 
-				<img src="ZEL.png" alt="Zero Ecosystems Lab">
+				<img src="uy.png" alt="Uruguay flag">
 
 			</div>
 
